// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewToolbarFieldSort Component should handle updating the view query through redux state with a component: dispatch type, component 1`] = `
[
  [
    [
      {
        "filter": "ordering",
        "type": "SET_QUERY",
        "value": "name",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarFieldSort Component should handle updating the view query through redux state with a hook: dispatch type, hook 1`] = `
[
  [
    [
      {
        "filter": "ordering",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarFieldSort Component should render a basic component: basic 1`] = `
<Fragment>
  <DropdownSelect
    ariaLabel="Select option"
    className=""
    data-test="toolbarSortType"
    direction="down"
    id="generatedid-"
    isDisabled={false}
    isDropdownButton={false}
    isFlipEnabled={false}
    isInline={true}
    isToggleText={true}
    maxHeight={null}
    name={null}
    onSelect={[Function]}
    onSplitButton={[Function]}
    options={
      [
        {
          "selected": true,
          "title": [Function],
          "value": "name",
        },
        {
          "title": [Function],
          "value": "source_type",
        },
        {
          "isDefaultDescending": true,
          "title": [Function],
          "value": "most_recent_connect_scan__start_time",
        },
      ]
    }
    placeholder="t(toolbar.label_option, {"context":"sort"})"
    position="left"
    selectedOptions={null}
    splitButtonVariant={null}
    toggleIcon={null}
    variant="single"
  />
  <ViewToolbarFieldSortButton
    t={[Function]}
    useOnClick={[Function]}
    useQuery={[Function]}
  />
</Fragment>
`;
